[package]
name = "rewfresh"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
color-eyre = "0.6.2"
dialoguer = { version = "0.10.3", features = ["completion"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
strsim = "0.10.0"
